--- a/frontEnd/views/Checkout.html
+++ b/frontEnd/views/Checkout.html
@@ -3,5 +3,5 @@
 <head>
     <title>Checkout</title>
     <link rel="stylesheet" href="../css/CheckoutStyle.css">
-    
+    <p>Thanks for your order! Your recipt has been sent to your email.</p>
 </html>
