More Basic HTML Setup
WIP

--- a/frontEnd/views/Checkout.html
+++ b/frontEnd/views/Checkout.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Checkout</title>
-    <link rel="stylesheet" href="../css/CheckoutStyle.css">
+    <title>E-Commerce Checkout</title>
+    <link rel="stylesheet" href="../css/checkoutStyle.css">
+    <body>
     <p>Thanks for your order! Your recipt has been sent to your email.</p>
+    <!--MAYBE SHOW WHAT THEY ORDERED HERE ?-->
+    <a href="../views/Catalog.html">Return to Catalog</a>
+    </body>
 </html>
