--- a/frontEnd/views/Catalog.html
+++ b/frontEnd/views/Catalog.html
@@ -14,7 +14,7 @@
         <div id="cartItems">
             <!--Item array will go here-->
         </div>
-        <p>Total: <span id="cart-total">$0.00</span></p>
+        <p>Total: <span id="cart-total">$0.00</span></p> <!--not sure if im receving price data-->
         <button id="checkout">Checkout</button>
     </section>
     <section id="catalog">
