--- a/frontEnd/views/Checkout.html
+++ b/frontEnd/views/Checkout.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/checkoutStyle.css">
     <body>
     <p>Thanks for your order! Your recipt has been sent to your email.</p>
-    <!--MAYBE SHOW WHAT THEY ORDERED HERE ?-->
+    <!--MAYBE SHOW WHAT THEY ORDERED HERE ? not sure yet-->
     <a href="../views/Catalog.html">Return to Catalog</a>
     </body>
 </html>
