--- a/frontEnd/views/Login.html
+++ b/frontEnd/views/Login.html
@@ -9,7 +9,7 @@
             <form id="loginForm">
                 <input id="userName" name="userName" type="text" placeholder="Enter UserName or Email", required>
                 <input id="password" name="password" type="password" placeholder="Password", required>
-                <button id="loginSubmit">Login</button>
+                <button id="loginSubmit">Sign In</button>
             </form>
     </head>
 </html>
