--- a/frontEnd/views/createUser.html
+++ b/frontEnd/views/createUser.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="../css/createUserStyle.css">
         <body>
             <h1>Create an Account</h1>
-            <p>Fill out this form to create an account.</p>
+            <p>Fill out this form with valid infomation to create an account.</p>
             <form id="userCreationForm">
                 <input id= "firstName" name="firstName" type="text" placeholder="First Name", required>
                 <input id= "lastName" name="lastName" type="text" placeholder="Last Name", required>
