--- a/frontEnd/views/Login.html
+++ b/frontEnd/views/Login.html
@@ -7,7 +7,7 @@
             <h1>Login</h1>
             <p>Please enter your username and password.</p>
             <form id="loginForm">
-                <input id="userName" name="userName" type="text" placeholder="Enter UserName or Email", required>
+                <input id="userName" name="userName" type="text" placeholder="Enter Username or Email", required>
                 <input id="password" name="password" type="password" placeholder="Password", required>
                 <button id="loginSubmit">Sign In</button>
             </form>
