--- a/frontEnd/views/createUser.html
+++ b/frontEnd/views/createUser.html
@@ -9,7 +9,7 @@
             <form id="userCreationForm">
                 <input id= "firstName" name="firstName" type="text" placeholder="First Name", required>
                 <input id= "lastName" name="lastName" type="text" placeholder="Last Name", required>
-                <input id="userName" name="userName" type="text" placeholder="User Name", required>
+                <input id="userName" name="userName" type="text" placeholder="Username", required>
                 <input id="email" name="email" type="text" placeholder="Email", required>
                 <input id="password" name="password" type="password" placeholder="Password", required>
                 <button id="createUserSubmit">Create Account</button>
