--- a/frontEnd/css/catalogStyle.css
+++ b/frontEnd/css/catalogStyle.css
@@ -1,3 +1,248 @@
-html{
-    background-color: aliceblue;
+html {
+    background-color: #6394f8;
+    color: #abb0be;
+}
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+#catalog {
+    flex-flow: row;
+    display: flex;
+    float: left;
+    width: 100%;
+    justify-content: inherit;
+}
+
+body {
+    font: 14px/22px "Lato", Arial, sans-serif;
+    background: #6394f8;
+}
+
+#mainHeader {
+    position: relative;
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 25px;
+    bottom: 15px;
+    right: 30px;
+
+}
+#itemimage{
+    height: 200px;
+    width: 150px;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #ffffff;
+}
+.catalog-item-info{
+    background-color: rgb(191, 218, 253);
+    width: fit-content;
+    height: fit-content;
+    color: #6d6a6a;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+.add-to-cart{
+    float: right;
+    background-color: #6394f8;
+    color: #ffffff;
+    border: #6394f8;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    width: fit-content;
+    height: fit-content;
+}
+
+.add-to-cart:hover{
+    background-color: #ffffff;
+    color: #6394f8;
+    border: #6394f8;
+}
+
+.badge {
+    top: 2px;
+    position: relative;
+    margin-left: 5px;
+    margin-bottom: 5px;
+
+}
+
+nav {
+    padding: 20px 0 40px 0;
+    background: #f8f8f8;
+    font-size: 16px;
+}
+
+ul {
+    display: inline;
+    padding-left: 20px;
+    color: #777777;
+    text-decoration: none;
+}
+
+li {
+    display: inline;
+    padding-left: 20px;
+    color: #777777;
+    text-decoration: none;
+}
+
+a {
+    display: inline;
+    padding-left: 20px;
+    color: #777777;
+    text-decoration: none;
+}
+
+a:hover {
+    color: black;
+}
+
+.navbar-left {
+    float: left;
+}
+
+.navbar-right {
+    float: right;
+}
+
+.container {
+    margin: auto;
+    width: 80%;
+}
+
+.badge {
+    background-color: #6394f8;
+    border-radius: 10px;
+    color: white;
+    display: inline-block;
+    font-size: 12px;
+    line-height: 1;
+    padding: 3px 7px;
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+#shopping-cart {
+    margin-top: 20px;
+    right: 30px;
+    float: right;
+    position: absolute;
+    background: white;
+    width: 320px;
+    border-radius: 3px;
+    padding: 20px;
+}
+
+#cart {
+    position: relative;
+    float: right;
+    margin-right: 20px;
+    bottom: 15px;
+    padding-right: 20px;
+    justify-content: space-evenly;
+}
+
+
+.shopping-cart-header {
+    border-bottom: 1px solid #e8e8e8;
+    padding-bottom: 15px;
+}
+
+.shopping-cart-total {
+    float: right;
+}
+
+.shopping-cart-items {
+    padding-top: 20px;
+    margin-bottom: 18px;
+}
+
+.item-name {
+    display: block;
+    padding-top: 10px;
+    font-size: 16px;
+}
+
+#menuTri {
+    position: relative;
+    bottom: 34px;
+    float: right;
+    right: 30px;
+}
+
+.item-price {
+    margin-right: 8px;
+}
+
+#icon {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+    position: relative;
+    top: 2px;
+}
+
+#shopping-cart.visible {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity .5s linear;
+}
+
+#shopping-cart.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s .5s, opacity .5s linear;
+}
+
+#shoppingcart:after {
+    bottom: 100%;
+    left: 89%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-bottom-color: white;
+    border-width: 8px;
+    margin-left: -8px;
+}
+
+.cart-icon {
+    color: #515783;
+    font-size: 24px;
+    margin-right: 7px;
+    float: left;
+}
+
+.button {
+    background: #6394f8;
+    color: white;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    display: block;
+    border-radius: 3px;
+    font-size: 16px;
+    margin: 25px 0 15px 0;
+}
+
+.button:hover {
+    background: lighten(#6394f8, 3%);
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
