changes to object schema, checkout creates a JSON

--- a/frontEnd/views/Catalog.html
+++ b/frontEnd/views/Catalog.html
@@ -49,4 +49,5 @@
     </body>
     <script src="../javascript/design.js"></script>
     <script src="../javascript/Catalog.js"></script>
+    <script src="../javascript/checkout.js"></script>
     </html>
