--- a/frontEnd/css/catalogStyle.css
+++ b/frontEnd/css/catalogStyle.css
@@ -31,20 +31,33 @@ body {
 
 }
 #itemimage{
-    height: 200px;
-    width: 150px;
-    padding: 15px;
-    border-radius: 5px;
-    background-color: #ffffff;
+    justify-content: center;
+    position: relative;
+    display: block;
+    max-width:500px;
+    max-height:300px;
+    width: auto;
+    height: auto;
+    margin: auto;
+    border-radius: 3px;
+    border: 1px solid rgb(230, 230, 230);
 }
 .catalog-item-info{
     background-color: rgb(191, 218, 253);
     width: fit-content;
     height: fit-content;
+    text-transform: capitalize;
+    flex-flow: row;
     color: #6d6a6a;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     margin: 10px;
+}
+.catalog-item-info a{
+    font-style: italic;
+    text-decoration: underline;
+    color: #6d6a6a;
+    margin-right: 35px;
 }
 
 .add-to-cart{
