--- a/frontEnd/views/Checkout.html
+++ b/frontEnd/views/Checkout.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>E-Commerce Checkout</title>
+    <title>Order Successful</title>
     <link rel="stylesheet" href="../css/checkoutStyle.css">
-    <body>
-    <p>Thanks for your order! Your recipt has been sent to your email.</p>
+</head>
+<nav>
+    <div class="conatainer">
+        <ul class="navbar-left">
+            <li id="mainHeader">E-Commerce Checkout Successful</h2></li>
+        </ul>
+    </div>
+</nav>
+<body>
+    <p>Thanks for your order! Your receipt has been sent to your email.</p>
     <!--MAYBE SHOW WHAT THEY ORDERED HERE ? not sure yet-->
     <a href="../views/Catalog.html">Return to Catalog</a>
-    </body>
+</body>
 </html>
