--- a/frontEnd/css/catalogStyle.css
+++ b/frontEnd/css/catalogStyle.css
@@ -8,12 +8,19 @@ body {
     margin: 0;
     padding: 0;
 }
+
 #catalog {
+    position: inherit;
     flex-flow: row;
+    flex-wrap: wrap;
     display: flex;
     float: left;
-    width: 100%;
+    width: fit-content;
     justify-content: inherit;
+    height: fit-content;
+    margin-left: 260px;
+    margin-top: -10px;
+    width: 90%;
 }
 
 body {
@@ -48,11 +55,13 @@ body {
     height: fit-content;
     text-transform: capitalize;
     flex-flow: row;
+    float: left;
     color: #6d6a6a;
     text-align: center;
     padding: 5px;
     margin: 10px;
     border-radius: 3px;
+    flex-wrap: wrap;
 }
 .catalog-item-info a{
     font-style: italic;
@@ -90,9 +99,11 @@ body {
 }
 
 nav {
+    position: sticky;
     padding: 20px 0 40px 0;
     background: #f8f8f8;
     font-size: 16px;
+    z-index: 100;
 }
 
 ul {
@@ -155,6 +166,7 @@ a:hover {
     width: 320px;
     border-radius: 3px;
     padding: 20px;
+    z-index: 1;
 }
 
 #cart {
@@ -283,4 +295,58 @@ a:hover {
     content: "";
     display: table;
     clear: both;
+}
+#search-filter-box{
+    color: #6d6a6a;
+    float: left;
+    position: fixed;
+    background-color: #f8f8f8;
+    padding: 5px;
+    display: flex;
+    flex-flow: column;
+    justify-content: left;
+    justify-content: space-evenly;
+    align-items: left;
+    width: 190px;
+    height: 850px;
+    z-index: 1;
+}
+
+#type-list{
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    align-items: left;
+    margin-bottom: 10px;
+}
+#price-list{
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    align-items: left;
+    margin-bottom: 10px;
+}
+#color-list{
+    flex-flow: column;
+    display: grid;
+    margin-bottom: 10px;
+}
+#searchButton{
+    background-color: #6394f8;
+    position: flex;
+    justify-content: space-between;
+    float: right;
+    color: #ffffff;
+    border: #6394f8;
+    padding: 5px;
+    margin: 15px;
+    width: 50%;
+    text-align: center;
+    height: fit-content;
+   
+}
+#searchButton:hover{
+    background-color: #ffffff;
+    color: #6394f8;
+    border: #6394f8;
 }
