--- a/frontEnd/css/catalogStyle.css
+++ b/frontEnd/css/catalogStyle.css
@@ -7,6 +7,7 @@ html,
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 #catalog {
@@ -18,9 +19,10 @@ body {
     width: fit-content;
     justify-content: inherit;
     height: fit-content;
-    margin-left: 260px;
+    margin-left: 270px;
     margin-top: -10px;
     width: 90%;
+
 }
 
 body {
@@ -62,6 +64,7 @@ body {
     margin: 10px;
     border-radius: 3px;
     flex-wrap: wrap;
+    width: 320px;
 }
 .catalog-item-info a{
     font-style: italic;
