emil and search type bottom

--- a/frontEnd/views/Catalog.html
+++ b/frontEnd/views/Catalog.html
@@ -54,11 +54,9 @@
                 <div id="type">
                     <h4>Type</h4>
                     <select id="type-list">
+                        <option name="No Preference" value="No Preference">No Preference</option>
                         <option name="top" value="top">Tops</option>
                         <option name="bottom" value="bottom">Bottoms</option>
-                        <option name="jacket" value="jacket">Jackets</option>
-                        <option name="shoes" value="shoes">Shoes</option>
-                        <option name="no prefrence" value="no prefrence">No Preference</option>
                     </select>
                 </div>
                 <div id="price">
@@ -66,7 +64,7 @@
                     <input type="text" id="price-filter" name="price-filter" placeholder="Price">
                 </div>
                 <div id="color">
-                    <h4>Color</h4>
+                    <h4>Size</h4>
                     <ul id="color-list">
                         <li><input id="inputRed" type="checkbox" name="box" value="RED">Red</li>
                         <li><input id="inputBlue" type="checkbox" name="box" value="BLUE">Blue</li>
