completed working front end

--- a/frontEnd/views/Catalog.html
+++ b/frontEnd/views/Catalog.html
@@ -66,19 +66,33 @@
                 <div id="color">
                     <h4>Size</h4>
                     <ul id="color-list">
-                        <li><input id="inputRed" type="checkbox" name="box" value="RED">Red</li>
-                        <li><input id="inputBlue" type="checkbox" name="box" value="BLUE">Blue</li>
-                        <li><input id="inputGreen" type="checkbox" name="box" value="GREEN">Green</li>
-                        <li><input id="inputBlack" type="checkbox" name="box" value="BLACK">Black</li>
-                        <li><input id="inputWhite" type="checkbox" name="box" value="WHITE">White</li>
-                        <li><input id="inputYellow" type="checkbox" name="box" value="YELLOW">Yellow</li>
-                        <li><input id="inputOrange" type="checkbox" name="box" value="ORANGE">Orange</li>
-                        <li><input id="inputPurple" type="checkbox" name="box" value="PURPLE">Purple</li>
-                        <li><input id="inputPink" type="checkbox" name="box" value="PINK">Pink</li>
-                        <li><input id="inputBrown" type="checkbox" name="box" value="BROWN">Brown</li>
-                        <li><input id="inputGrey" type="checkbox" name="box" value="GREY">Grey</li>
-                        <li><input id="inputSilver" type="checkbox" name="box" value="SILVER">Silver</li>
-                        <li><input id="inputGold" type="checkbox" name="box" value="GOLD">Gold</li>
+                        <li><input id="0X" type="checkbox" name="box" value="0X">0X</li>
+                        <li><input id="0X/1X" type="checkbox" name="box" value="0X/1X">0X/1X</li>
+                        <li><input id="12" type="checkbox" name="box" value="12">12</li>
+                        <li><input id="14" type="checkbox" name="box" value="14">14</li>
+                        <li><input id="16" type="checkbox" name="box" value="16">16</li>
+                        <li><input id="18" type="checkbox" name="box" value="18">18</li>
+                        <li><input id="1X" type="checkbox" name="box" value="1X">1X</li>
+                        <li><input id="20" type="checkbox" name="box" value="20">20</li>
+                        <li><input id="22" type="checkbox" name="box" value="22">22</li>
+                        <li><input id="24" type="checkbox" name="box" value="24">24</li>
+                        <li><input id="26" type="checkbox" name="box" value="26">26</li>
+                        <li><input id="2X" type="checkbox" name="box" value="2X">2X</li>
+                        <li><input id="2X/3X" type="checkbox" name="box" value="2X/3X">2X/3X</li>
+                        <li><input id="2XL" type="checkbox" name="box" value="2XL">2XL</li>
+                        <li><input id="30" type="checkbox" name="box" value="30">30</li>
+                        <li><input id="3X" type="checkbox" name="box" value="3X">3X</li>
+                        <li><input id="3X/4X" type="checkbox" name="box" value="3X/4X">3X/4X</li>
+                        <li><input id="4X" type ="checkbox" name="box" value="4X">4X</li>
+                        <li><input id="L" type="checkbox" name="box" value="L">L</li>
+                        <li><input id="M" type="checkbox" name="box" value="M">M</li>
+                        <li><input id="S" type="checkbox" name="box" value="S">S</li>
+                        <li><input id="XL" type="checkbox" name="box" value="XL">XL</li>
+                        <li><input id="XS" type="checkbox" name="box" value="XS">XS</li>
+                        <li><input id="XXL" type="checkbox" name="box" value="XXL">XXL</li>
+                        <li><input id="L/0X" type="checkbox" name="box" value="L/0X">L/0X</li>
+                        <li><input id="M/L" type="checkbox" name="box" value="M/L">M/L</li>
+                        <li><input id="S/M" type="checkbox" name="box" value="S/M">S/M</li>
                     </ul>
                 </div>
                 <button id="submit">Search</button>
